2005-06-20 Vladimir Hirsl
	Completed optimization #2 in PR 91801: [Indexer] Optimize header file visiting/indexing
	Encountered headers are removed before instead of after indexing the whole project, thus
	enabling 'index external headers only once' optimization to be applied for file/directory
	indexing.
	
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMAddFolderToIndex.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/DOMIndexAllProject.java

2005-06-17 Vladimir Hirsl
	Fix for 95174: [Search Engine][DOM AST Indexer] does not find definition of a method
	
	* index/org/eclipse/cdt/internal/core/index/cindexstorage/EntryResult.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexVisitorUtil.java
	* search/org/eclipse/cdt/core/search/DOMSearchUtil.java

2005-06-16 Vladimir Hirsl
	Fix for PR 99433: [Search]  Return parms not part of qualification matching
	Function/methos parameters are now used as a part of search pattern.
	Note: return parameters are NOT used as a part of search pattern. The PR title
	is somewhat missleading.
	
	* index/org/eclipse/cdt/internal/core/index/ctagsindexer/CTagEntry.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/CPPGenerateIndexVisitor.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexEncoderUtil.java
	* index/org/eclipse/cdt/internal/core/index/domsourceindexer/IndexVisitorUtil.java
	* search/org/eclipse/cdt/core/search/BasicSearchMatch.java
	* search/org/eclipse/cdt/core/search/DOMSearchUtil.java
	* search/org/eclipse/cdt/internal/core/search/matching/CSearchPattern.java
	* search/org/eclipse/cdt/internal/core/search/matching/MethodDeclarationPattern.java
			
2005-06-14 David Inglis
	
	Support for older cygpaths - bug # 94702
	
	* utils/org/eclipse/cdt/utils/CygPath.java
	
2005-06-08 Alain Magloire
	Attempt to fix PR 97554